<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>de.kisner</groupId>
	<artifactId>ca4j</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
    <name>CA for Java</name>
    <description>x</description>

	<properties>
		<my.build.directory>target</my.build.directory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.ignore.versions>file://${project.basedir}/src/main/resources/ca4j/maven/ignore-versions.xml</maven.ignore.versions>
	</properties>

	<dependencyManagement>
		
	</dependencyManagement>

	<dependencies>		
	
		<!-- PKIX -->
	    <dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.64</version>
		</dependency>
    
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>compile</scope>
			<version>1.7.30</version>
		</dependency>
		
		<!-- Test -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>test</scope>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<scope>test</scope>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<scope>test</scope>
			<version>1.2.17</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
		         <groupId>org.apache.maven.plugins</groupId>
		        	<artifactId>maven-pmd-plugin</artifactId>
		        	<version>3.6</version>
		        	<configuration>
			        	<linkXRef>false</linkXRef>
			      </configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<inherited>true</inherited>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-enforcer-plugin</artifactId>
        		<version>1.4</version>
        		<executions>
          			<execution>
            			<id>enforce-banned-dependencies</id>
            			<goals><goal>enforce</goal></goals>
            			<configuration>
              				<rules>
                				<bannedDependencies>
                  					<excludes>
                    					<exclude>commons-logging</exclude>
                  					</excludes>
                				</bannedDependencies>
              				</rules>
              				<fail>true</fail>
            			</configuration>
          			</execution>
        		</executions>
			</plugin>
			<plugin>
				<groupId>net.sf.exlp</groupId>
				<artifactId>exlp-maven</artifactId>
				<version>0.1.18-SNAPSHOT</version>
				<executions>
 					<execution>
						<id>create-merged-maven-ignore</id>
						<phase>process-resources</phase> 
						<goals><goal>mvnVersionIgnore</goal></goals>
						<configuration>
							<log>WARN</log>
							<files>
							  <param>exlp/maven/exlp-versions.xml</param>
				<!-- 			  <param>${basedir}/src/main/resources/jeesl/maven/jeesl-versions.xml</param>  -->
							</files>
							<saveTo>${basedir}/src/main/resources/ca4j/maven/ignore-versions.xml</saveTo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
		        <groupId>org.codehaus.mojo</groupId>
		        <artifactId>versions-maven-plugin</artifactId>
		        <version>2.2</version>
		        <configuration><configuration><rulesUri>${maven.ignore.versions}</rulesUri></configuration></configuration>
		      </plugin>
		       
		</plugins>
	</build>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

  	<repositories>
		<repository>
			<id>sonatype.snapshot</id>
			<name>Sonatype Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>
	
	<profiles>
    	<profile>
       		<id>ram</id>
       		<build>
       			<directory>${my.build.directory}</directory>
       		</build>
		</profile>
		<profile>
			<id>only-eclipse</id>
			<activation><property><name>m2e.version</name></property></activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
			      						<pluginExecution>
		                					<pluginExecutionFilter>
		                  						<groupId>org.apache.maven.plugins</groupId>
		                  						<artifactId>maven-enforcer-plugin</artifactId>
		                  						<versionRange>[1.0.0,)</versionRange>
		                  						<goals><goal>enforce</goal></goals>
		                					</pluginExecutionFilter>
		                					<action><ignore /></action>
		              					</pluginExecution>
		              					<pluginExecution>
		              						<pluginExecutionFilter>
		              							<groupId>net.sf.exlp</groupId>
		              							<artifactId>exlp-maven</artifactId>
		              							<versionRange>[0.1.11-SNAPSHOT,)</versionRange>
		              							<goals><goal>mvnVersionIgnore</goal></goals>
		              						</pluginExecutionFilter>
		              						<action><ignore></ignore></action>
		              					</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>